# time-guardian

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
tests/: requirements-dev.txt  test_capture.py  test_cli.py  test_main.py  test_report.py  test_storage.py  test_visibility.py
tests/integration/: test_workflow.py
time_guardian/: _version.py  analyze.py  capture.py  cli.py  report.py  storage.py  utils.py  visibility.py  windows.py
